<resources>
    <string name="app_name">Embrace Your Life</string>
    <string name="Odbyte_Treningi">Odbyte Treningi</string>
    <string name="Opuszczone_Treningi">Opuszczone Treningi</string>
    <string name="Czas_poswiecony">Czas poświęcony</string>
    <string name="_0">0</string>
    <string name="tydzien">tydzień</string>
    <string name="miesiac">miesiąc</string>
    <string name="Statystyki_cwiczen">Statystyki ćwiczeń</string>
    <string name="Statystyki_ogolne">Statystyki ogólne</string>

    <string name="Gotowe">Gotowe</string>
    <string name="Anuluj">Anuluj</string>
    <string name="Nazwij_cwiczenie">Nazwij ćwiczenie</string>
    <string name="Powtorzenia">Powtórzenia</string>
    <string name="Obciazenie">Obciążenie</string>
    <string name="Czas_trwania">Czas trwania</string>
    <string name="Dystans">Dystans</string>
    <string-array name="Kategoria">
        <item>"kategoria 1"</item>
        <item>"kategoria 2"</item>
        <item>"kategoria 3"</item>
    </string-array>

    <string name="Akcje">Akcje</string>
    <string name="Kalendarz">Kalendarz</string>
    <string name="Wolne_terminy">Wolne terminy</string>
    <string name="Silownia">Siłownia</string>
    <string name="Dodaj_wydarzenie">Dodaj wydarzenie</string>

    <string name="Dodaj_trening">Dodaj trening</string>
    <string name="Statystyki">Statystyki</string>
    <string name="Plan_tygodnia">Plan tygodnia</string>

    <string-array name="Powtarzalnosc">
        <item>Jednorazowe</item>
        <item>Powtarzające się</item>
    </string-array>
    <string name="Cwiczenie">Ćwiczenie</string>
    <string name="Atrybut">Atrybut:</string>
    <string name="Czas">Czas</string>
    <string name="HH_MM">HH:MM</string>
    <string name="Data">Data</string>
    <string name="DD_MM_YYYY">DD/M(M)/YYYY</string>

    <string name="kategoria">Kategoria</string>
    <string name="Miejsce">Miejsce</string>
    <string name="Nazwa">Nazwa</string>
    <string name="Nazwa_treningu">Nazwa treningu</string>
    <string name="Plan_treningu">Plan treningu</string>
    <string name="Powtarzalnosc">Powtarzalność</string>
    <string name="Dodaj_cwiczenie">Dodaj ćwiczenie</string>
    <string name="pusty_string"/>
    <string name="Domyslny_opis_wydarzenia">Domyślny opis wydarzenia</string>
</resources>