<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GymStatsActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="299dp"
        android:layout_height="139dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.357">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tydzien" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/miesiac" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="258dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:text="@string/Odbyte_Treningi"
                android:textSize="18sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/odbyteTreningiTydzienTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/_0"
                android:textSize="30sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/odbyteTreningiMiesiacTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/_0"
                android:textSize="30sp"
                android:visibility="visible" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:text="@string/Opuszczone_Treningi"
                android:textSize="18sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/opuszczoneTreningiTydzienTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/_0"
                android:textSize="30sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/opuszczoneTreningiMiesiacTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/_0"
                android:textSize="30sp"
                android:visibility="visible" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:text="@string/Czas_poswiecony"
                android:textSize="18sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/czasPoswieconyTydzienTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/_0"
                android:textSize="30sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/czasPoswieconyMiesiacTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/_0"
                android:textSize="30sp"
                android:visibility="visible" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/statystykiCwiczenButton"
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:text="@string/Statystyki_cwiczen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tableLayout"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.504" />

    <Button
        android:id="@+id/statystykiOgolneButton"
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:text="@string/Statystyki_ogolne"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.504" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/statystykiOgolneButton"
        app:layout_constraintStart_toEndOf="@+id/statystykiCwiczenButton"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:onClick="powrotDoSilowniListener"
        android:text="@string/Gotowe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>