<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/OknoRodzica"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:windowSoftInputMode="stateHidden"
    tools:context=".TworzenieTreningu">


    <EditText
        android:id="@+id/OpisWydarzeniaMultiLine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints="@string/pusty_string"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/Domyslny_opis_wydarzenia"
        android:inputType="textMultiLine"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/GotoweTrening"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PlanTreningu_OpisWydarzeniaText" />

    <ScrollView
        android:id="@+id/ListaCwiczenWTreninguScroll"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PlanTreningu_OpisWydarzeniaText">

        <LinearLayout
            android:id="@+id/Cwiczenia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <TextView
        android:id="@+id/textNazwa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Nazwa"
        app:layout_constraintEnd_toStartOf="@+id/textPowtarzalnosc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editNazwa"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:autofillHints="@string/Nazwa_treningu"
        android:ems="10"
        android:hint="@string/Nazwa_treningu"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/textNazwa"
        app:layout_constraintStart_toStartOf="@+id/textNazwa"
        app:layout_constraintTop_toBottomOf="@+id/textNazwa" />

    <TextView
        android:id="@+id/textPowtarzalnosc"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Czas_trwania"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerPowtarzalnosc"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/textPowtarzalnosc"
        app:layout_constraintStart_toStartOf="@+id/textPowtarzalnosc"
        app:layout_constraintTop_toBottomOf="@+id/textPowtarzalnosc" />

    <TextView
        android:id="@+id/textCzas"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Czas"
        app:layout_constraintStart_toStartOf="@+id/editNazwa"
        app:layout_constraintTop_toBottomOf="@+id/editNazwa" />

    <EditText
        android:id="@+id/editCzas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/HH_MM"
        android:importantForAutofill="no"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="@+id/textCzas"
        app:layout_constraintStart_toStartOf="@+id/textCzas"
        app:layout_constraintTop_toBottomOf="@+id/textCzas" />

    <View
        android:id="@+id/editCzasView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="timePicker"
        app:layout_constraintBottom_toBottomOf="@id/editCzas"
        app:layout_constraintEnd_toEndOf="@id/editCzas"
        app:layout_constraintStart_toStartOf="@id/editCzas"
        app:layout_constraintTop_toBottomOf="@id/textCzas" />

    <TextView
        android:id="@+id/textData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/Data"
        app:layout_constraintEnd_toEndOf="@+id/spinnerPowtarzalnosc"
        app:layout_constraintStart_toEndOf="@+id/textCzas"
        app:layout_constraintTop_toBottomOf="@+id/editNazwa" />

    <EditText
        android:id="@+id/editData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/DD_MM_YYYY"
        android:importantForAutofill="no"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/textData"
        app:layout_constraintStart_toStartOf="@+id/textData"
        app:layout_constraintTop_toBottomOf="@+id/textData" />

    <View
        android:id="@+id/editDataView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints="@string/Data"
        android:clickable="true"
        android:focusable="true"
        android:onClick="datePicker"
        app:layout_constraintBottom_toBottomOf="@id/editData"
        app:layout_constraintEnd_toEndOf="@id/editData"
        app:layout_constraintStart_toStartOf="@id/editData"
        app:layout_constraintTop_toBottomOf="@id/textData" />

    <TextView
        android:id="@+id/PlanTreningu_OpisWydarzeniaText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Plan_treningu"
        app:layout_constraintEnd_toEndOf="@+id/editCzas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCzas" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="@string/Dodaj_cwiczenie"
        android:onClick="dodajCwiczenie"
        app:layout_constraintBottom_toTopOf="@+id/GotoweTrening"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <Button
        android:id="@+id/GotoweTrening"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:layout_marginEnd="20dp"
        android:onClick="wrocDoGym"
        android:text="@string/Gotowe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ListaCwiczenWTreninguScroll" />

    <Button
        android:id="@+id/AnulujTrening"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:onClick="anulujDodawania"
        android:text="@string/Anuluj"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ListaCwiczenWTreninguScroll" />

    <LinearLayout
        android:id="@+id/OknoNowegoCwiczeniaWTreningu"
        android:layout_width="280dp"
        android:layout_height="380dp"
        android:background="#673AB7"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:visibility="invisible"
        android:weightSum="19"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/NoweCwiczenieWTreninguNazwa"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:text="@string/Nazwa"
            android:textSize="36sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/RzadPowtorzen"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:id="@+id/NoweCwiczenieWTreninguAtrybut1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/Powtorzenia"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/NoweCwiczenieWTreninguIlosc1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/pusty_string"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textSize="18sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/RzadObciazenia"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:id="@+id/NoweCwiczenieWTreninguAtrybut2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/Obciazenie"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/NoweCwiczenieWTreninguIlosc2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/pusty_string"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textSize="18sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/RzadCzasu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:id="@+id/NoweCwiczenieWTreninguAtrybut3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/Czas"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/NoweCwiczenieWTreninguIlosc3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/pusty_string"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textSize="18sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/RzadDystansu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:id="@+id/NoweCwiczenieWTreninguAtrybut4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/Dystans"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/NoweCwiczenieWTreninguIlosc4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/pusty_string"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textSize="18sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/NoweCwiczeniePrzyciskDodaj"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:onClick="schowajOkno"
            android:text="@string/Gotowe" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/OknoCwiczenWTreningu"
        android:layout_width="280dp"
        android:layout_height="380dp"
        android:background="#673AB7"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/CwiczeniaWTreninguNaglowek"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:orientation="horizontal"
            android:weightSum="7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/CwiczeniaWTreninguNazwa"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/Nazwa" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/CwiczeniaWTreninguScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/CwiczeniaWTreninguNaglowek">

            <LinearLayout
                android:id="@+id/CwiczeniaWTreninguScrollViewLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/CzasTrwaniaEditText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="W minutach"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="@id/textPowtarzalnosc"
        app:layout_constraintStart_toStartOf="@id/textPowtarzalnosc"
        app:layout_constraintTop_toBottomOf="@id/textPowtarzalnosc" />


</androidx.constraintlayout.widget.ConstraintLayout>